# voice-mixer

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-ml.txt  requirements.txt
scripts/: download_checkpoints.sh  setup_qwen_venv.sh
tests/: conftest.py  test_audio.py  test_chorus.py  test_embeddings.py  test_manifesto.py  test_mixspec.py  test_storage.py  test_teapunk.py
voicelab/: __init__.py  api.py  audio.py  chorus.py  cli.py  config.py  embeddings.py  engine.py  mailer.py  manifesto.py  mixspec.py  qwen_worker.py  storage.py  teapunk.py  webapp.py
voicelab/data/: manifesto.txt
